WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180404
WebDriver: most of the clear tests are failing
https://bugs.webkit.org/show_bug.cgi?id=180404
Summary
WebDriver: most of the clear tests are failing
Carlos Garcia Campos
Reported
2017-12-05 02:36:41 PST
WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_no_browsing_context PASSED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_element_not_found FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_element_not_editable FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_button_element_not_resettable FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_disabled_element_not_resettable PASSED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_scroll_into_element_view FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_element_readonly PASSED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_element_disabled PASSED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_element_pointer_events_disabled FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element0] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element1] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element2] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element3] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element4] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element5] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element6] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element7] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element8] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element9] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element10] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element11] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element12] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element13] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element14] FAILED WebDriverTests/imported/w3c/webdriver/tests/interaction/element_clear.py::test_clear_content_editable_resettable_element[element15] FAILED
Attachments
Patch
(19.08 KB, patch)
2019-11-26 08:18 PST
,
Carlos Garcia Campos
bburg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2018-11-02 22:37:58 PDT
These tests are all flaky (sometimes passing): imported/w3c/webdriver/tests/element_clear/clear.py::test_input_file imported/w3c/webdriver/tests/element_clear/clear.py::test_input_file_multiple imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[number-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[range-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[email-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[url-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[color-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[date-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[datetime-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[datetime-local-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[time-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[month-foo] imported/w3c/webdriver/tests/element_clear/clear.py::test_resettable_element_does_not_satisfy_validation_constraints[week-foo] Since the test runner can't handle multiple expectations for the same test, I will skip them.
Carlos Garcia Campos
Comment 2
2019-11-26 08:18:27 PST
Created
attachment 384357
[details]
Patch
Blaze Burg
Comment 3
2019-12-02 16:09:07 PST
Comment on
attachment 384357
[details]
Patch r=me, nice!
Carlos Garcia Campos
Comment 4
2019-12-03 01:32:21 PST
Committed
r253029
: <
https://trac.webkit.org/changeset/253029
>
Radar WebKit Bug Importer
Comment 5
2019-12-03 01:33:22 PST
<
rdar://problem/57585229
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug