WebDriver: most of the clear tests are failing https://bugs.webkit.org/show_bug.cgi?id=180404

Reviewed by Brian Burg.

Source/WebDriver:

Implement the element clear command following the spec.
https://w3c.github.io/webdriver/#element-clear

* Session.cpp:
(WebDriver::Session::elementIsEditable): Helper function to check if the element is editable.
(WebDriver::Session::elementClear): Check if the element is editable and interactable before executing the clear atom.
* Session.h:

Source/WebKit:

Update the FormElementClear atom to follow the spec.

* UIProcess/Automation/atoms/FormElementClear.js:
(isEditable):
(isResettableElementEmpty):

WebDriverTests:

Remove expectations for tests that are now passing.

* TestExpectations.json:

Canonical link: https://commits.webkit.org/217994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253029 268f45cc-cd09-0410-ab3c-d52691b4dbfc