Source/WebKit/UIProcess/Automation/atoms/FormElementClear.js
@@ -26,34 +26,69 @@
 function(element) {
     "use strict";
 
-    if (element.disabled || element.readOnly)
+    function isEditable(element) {
+        if (element.disabled || element.readOnly)
+            return false;
+
+        if (element instanceof HTMLTextAreaElement)
+            return true;
+
+        if (element.isContentEditable)
+            return true;
+
+        if (element.tagName.toUpperCase() != "INPUT")
+            return false;
+
+        switch (element.type) {
+        case "color":
+        case "date":
+        case "datetime-local":
+        case "email":
+        case "file":
+        case "month":
+        case "number":
+        case "password":
+        case "range":
+        case "search":
+        case "tel":
+        case "text":
+        case "time":
+        case "url":
+        case "week":
+            return true;
+        }
+
+        return false;
+    }
+
+    if (!isEditable(element))
         throw {name: "InvalidElementState", message: "Element must be user-editable in order to clear."};
 
-    if (element instanceof HTMLTextAreaElement || element instanceof HTMLSelectElement) {
-        element.value = "";
-        return;
-    }
-
-    if (element instanceof HTMLInputElement) {
-        switch (element.type) {
-        case "button":
-        case "submit":
-        case "reset":
-            return;
-
-        case "radio":
-        case "checkbox":
-            element.checked = false;
-            return;
-
-        default:
-            element.value = "";
-            return;
-        }
-    }
-
+    // Clear a content editable element.
     if (element.isContentEditable) {
+        if (element.innerHTML === "")
+            return;
+
+        element.focus();
         element.innerHTML = "";
+        element.blur();
         return;
     }
+
+    // Clear a resettable element.
+    function isResettableElementEmpty(element) {
+        if (element instanceof HTMLInputElement && element.type == "file")
+            return element.files.length == 0;
+        return element.value === "";
+    }
+
+    if (element.validity.valid && isResettableElementEmpty(element))
+        return;
+
+    element.focus();
+    element.value = "";
+    var event = document.createEvent("Event");
+    event.initEvent("change", true, true);
+    element.dispatchEvent(event);
+    element.blur();
 }
